--- a/index.html
+++ b/index.html
@@ -570,6 +570,13 @@
                 closeOrderForm();
             }
         });
-    </script>
+</script>
+
+<script>
+// Mr. Grey Courses v2.1 - автоматическое обновление кэша
+const version = "2.1";
+console.log(`🚀 Mr. Grey Courses v${version}`);
+localStorage.setItem('site_version', version);
+</script>
 </body>
 </html>
